--- a/site/2117_infinite_loop/index.html
+++ b/site/2117_infinite_loop/index.html
@@ -26,7 +26,9 @@ https://www.tooplate.com/view/2117-infinite-loop
           <div class="tm-next">
               <a href="#infinite" class="navbar-brand">Infinite Loop</a>
           </div>             
-            
+          <div class="tm-next">
+            <a href="#infinite" class="navbar-brand">Infinite Loop</a>
+        </div>   
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars navbar-toggler-icon"></i>
           </button>
